Fix Show Recipes tooltip for machines with an upgrade view in the JEI integration